--- a/App.config
+++ b/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="DanceClub.Properties.Settings.danceclubdbConnectionString"
+            connectionString="server=localhost;user id=root;password=1969yearofspace;persistsecurityinfo=True;database=danceclubdb"
+            providerName="MySql.Data.MySqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
